# Labor

./: CMakeLists.txt  basics.c  gradesaverage.c
.devcontainer/: devcontainer.json
NewLibraries/: CMakeLists.txt
NewLibraries/include/: functions.h
NewLibraries/src/: functions.c
Probe/: CMakeLists.txt  developer.c  developer.h  developer_group.c  exam_1_main  main.c
Templates/: CMakeLists.txt
Templates/src/: main.cpp
arrays/: CMakeLists.txt  arrays2.cpp
cvplot/: CMakeLists.txt
doxygen_output/html/: CMakeLists_8txt.html  README_8md.html  Templates_2CMakeLists_8txt.html  Templates_2build_2CMakeCache_8txt.html  Templates_2build_2CMakeFiles_23_831_83_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  Templates_2build_2CMakeFiles_2TargetDirectories_8txt.html  Templates_2build_2CMakeFiles_2Template_8dir_2link_8d.html  Templates_2build_2CMakeFiles_2Template_8dir_2link_8txt.html  Templates_2build_2CMakeFiles_2Template_8dir_2src_2main_8cpp_8o_8d.html  Templates_2src_2main_8cpp.html  Templates_2src_2main_8cpp__incl.map  Templates_2src_2main_8cpp__incl.md5  Templates_2src_2main_8cpp_a014107f59027a9b0d6e1479bfdeeef25_icgraph.map  Templates_2src_2main_8cpp_a014107f59027a9b0d6e1479bfdeeef25_icgraph.md5  Templates_2src_2main_8cpp_a8216c1645620cdb2f629cde3ac02ffef_cgraph.map  Templates_2src_2main_8cpp_a8216c1645620cdb2f629cde3ac02ffef_cgraph.md5  addandprint_8c.html  addandprint_8c__incl.map  addandprint_8c__incl.md5  addandprint_8c_a668db5a4dca5bfd761680715415c1d73_icgraph.map  addandprint_8c_a668db5a4dca5bfd761680715415c1d73_icgraph.md5  addandprint_8c_a840291bc02cba5474a4cb46a9b9566fe_cgraph.map  addandprint_8c_a840291bc02cba5474a4cb46a9b9566fe_cgraph.md5  annotated.html  arrays2_8cpp.html  arrays2_8cpp_8o_8d.html  arrays2_8cpp__incl.map  arrays2_8cpp__incl.md5  arrays2_8cpp_a8216c1645620cdb2f629cde3ac02ffef_cgraph.map  arrays2_8cpp_a8216c1645620cdb2f629cde3ac02ffef_cgraph.md5  arrays2_8cpp_ab3f8f9f7e1657217982d374fdbea4629_icgraph.map  arrays2_8cpp_ab3f8f9f7e1657217982d374fdbea4629_icgraph.md5  arrays2_8cpp_ac7ecc5bd44818aa277689b6d4cf492f8_icgraph.map  arrays2_8cpp_ac7ecc5bd44818aa277689b6d4cf492f8_icgraph.md5  arrays_2CMakeLists_8txt.html  arrays_2build_2CMakeCache_8txt.html  arrays_2build_2CMakeFiles_23_831_83_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  arrays_2build_2CMakeFiles_2CMakeRuleHashes_8txt.html  arrays_2build_2CMakeFiles_2TargetDirectories_8txt.html  arrays_2build_2CMakeFiles_2arrays2_8dir_2link_8d.html  (+807 more)
doxygen_output/latex/: CMakeLists_8txt.tex  Templates_2CMakeLists_8txt.tex  Templates_2build_2CMakeCache_8txt.tex  Templates_2build_2CMakeFiles_23_831_83_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.tex  Templates_2build_2CMakeFiles_2TargetDirectories_8txt.tex  Templates_2build_2CMakeFiles_2Template_8dir_2link_8d.tex  Templates_2build_2CMakeFiles_2Template_8dir_2link_8txt.tex  Templates_2build_2CMakeFiles_2Template_8dir_2src_2main_8cpp_8o_8d.tex  Templates_2src_2main_8cpp.tex  Templates_2src_2main_8cpp__incl.md5  Templates_2src_2main_8cpp_a014107f59027a9b0d6e1479bfdeeef25_icgraph.md5  addandprint_8c.tex  annotated.tex  (+529 more)
ellipsplot/: CMakeLists.txt  run_cmake.sh
execptions/: CMakeLists.txt  create_cpp_project.sh
html/: md_README.html  pages.html
hw2-4/: CMakeLists.txt
inheritance/: CMakeLists.txt  inheritance.cpp
latex/: md_README.tex
opencv/: CMakeLists.txt  create_cpp_project_opencv.sh
opencv/src/: main.cpp
part1/: CMakeLists.txt  calculatepercentages.c
part2/: CMakeLists.txt  run_cmake.sh  student_struct.cpp
part2/include/: student_struct.hpp
polymorphism/: CMakeLists.txt
programms/: addandprint.c  elseif.c  sizeofeverything.c  studentstruct.c  switchcase.c  usingpointers.c
stlandtypecasting/: CMakeLists.txt  run_cmake.sh
(+97 files in other folders)
