cmake_minimum_required(VERSION 3.20)

project(placeholder_project_name VERSION 1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED True)

#add_library(LIBRARY_NAME student.cpp)

add_executable(STLandtypecasting src/main.cpp)

#target_link_libraries(sample_exec PUBLIC LIBRARY_NAME)

